Continúo navegación entre pantallas.

--- a/rutas/Base.lproj/Main.storyboard
+++ b/rutas/Base.lproj/Main.storyboard
@@ -99,6 +99,41 @@
             </objects>
             <point key="canvasLocation" x="-572" y="13"/>
         </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Kjb-DA-1kv">
+            <objects>
+                <viewController storyboardIdentifier="profileVC" id="JBi-sT-YkE" customClass="profileViewController" customModule="rutas" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ry2-KF-LyX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pf8-HA-4RM">
+                                <rect key="frame" x="11" y="57" width="132" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="132" id="oim-2n-JPD"/>
+                                </constraints>
+                                <state key="normal" title=" Atrás" image="arrow.left" catalog="system">
+                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="routeListButton:" destination="7u5-LR-IYA" eventType="touchUpInside" id="KCO-Ik-dnS"/>
+                                    <action selector="routeListButton:" destination="JBi-sT-YkE" eventType="touchUpInside" id="tqO-Cg-jb1"/>
+                                    <action selector="settingsButton:" destination="nGI-H4-Sqm" eventType="touchUpInside" id="H2y-HJ-aXk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pf8-HA-4RM" firstAttribute="centerX" secondItem="Ry2-KF-LyX" secondAttribute="centerX" constant="-130" id="4MI-l4-vnj"/>
+                            <constraint firstItem="pf8-HA-4RM" firstAttribute="centerY" secondItem="Ry2-KF-LyX" secondAttribute="centerY" constant="-380" id="6Ro-hV-3cv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ooq-fI-i14"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dy7-tE-drO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2361" y="746"/>
+        </scene>
         <!--RecoverPW View Controller-->
         <scene sceneID="NoE-hf-yFd">
             <objects>
@@ -180,7 +215,7 @@
         <!--Map View Controller-->
         <scene sceneID="d62-Mu-BTu">
             <objects>
-                <viewController id="H90-WN-rKM" customClass="mapViewController" customModule="rutas" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mapVC" id="H90-WN-rKM" customClass="mapViewController" customModule="rutas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QzG-Bi-gQg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -189,8 +224,12 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </mapView>
                             <button opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFL-tn-haj">
-                                <rect key="frame" x="345" y="86.666666666666671" width="24.333333333333314" height="23"/>
+                                <rect key="frame" x="339.66666666666669" y="80.666666666666671" width="35" height="35"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="9VK-Rt-P4S"/>
+                                    <constraint firstAttribute="height" constant="35" id="gRJ-ek-xBy"/>
+                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="wrench.fill" catalog="system"/>
                             </button>
@@ -210,15 +249,15 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="wQ6-5c-j0i" firstAttribute="leading" secondItem="cRG-vc-xQ7" secondAttribute="leading" id="3GT-b4-3Ry"/>
-                            <constraint firstItem="UFL-tn-haj" firstAttribute="centerY" secondItem="QzG-Bi-gQg" secondAttribute="centerY" constant="-350" id="3sy-oa-DFS"/>
                             <constraint firstItem="apO-s0-3df" firstAttribute="centerY" secondItem="QzG-Bi-gQg" secondAttribute="centerY" constant="350" id="8xJ-Uu-WVl"/>
                             <constraint firstItem="cRG-vc-xQ7" firstAttribute="trailing" secondItem="wQ6-5c-j0i" secondAttribute="trailing" id="BTL-Pu-eUF"/>
                             <constraint firstItem="cRG-vc-xQ7" firstAttribute="bottom" secondItem="wQ6-5c-j0i" secondAttribute="bottom" id="LdV-I7-Mvp"/>
+                            <constraint firstItem="UFL-tn-haj" firstAttribute="centerX" secondItem="QzG-Bi-gQg" secondAttribute="centerX" constant="150" id="Npc-4R-72H"/>
                             <constraint firstItem="yNK-dV-zwt" firstAttribute="centerX" secondItem="QzG-Bi-gQg" secondAttribute="centerX" constant="-150" id="UYB-2M-1yt"/>
                             <constraint firstItem="apO-s0-3df" firstAttribute="centerX" secondItem="QzG-Bi-gQg" secondAttribute="centerX" constant="150" id="Wvd-kC-xdJ"/>
                             <constraint firstItem="yNK-dV-zwt" firstAttribute="centerY" secondItem="QzG-Bi-gQg" secondAttribute="centerY" constant="350" id="enR-hA-QfU"/>
                             <constraint firstItem="wQ6-5c-j0i" firstAttribute="top" secondItem="cRG-vc-xQ7" secondAttribute="top" id="giZ-b7-2VR"/>
-                            <constraint firstItem="UFL-tn-haj" firstAttribute="centerX" secondItem="QzG-Bi-gQg" secondAttribute="centerX" constant="150" id="jiW-yn-BDE"/>
+                            <constraint firstItem="UFL-tn-haj" firstAttribute="centerY" secondItem="QzG-Bi-gQg" secondAttribute="centerY" constant="-350" id="qUg-ld-Ne6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cRG-vc-xQ7"/>
                     </view>
@@ -326,6 +365,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jHK-Po-Idg"/>
                     </view>
+                    <navigationItem key="navigationItem" id="93m-bh-yUs"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fk7-EV-ZRc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -355,6 +395,9 @@
                                 <state key="normal" title="MADRID MEDIEVAL">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="mapButton:" destination="6Hy-Ko-2h0" eventType="touchUpInside" id="1rE-di-Xt9"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVH-M5-6xk">
                                 <rect key="frame" x="32" y="415.66666666666669" width="350" height="65"/>
@@ -397,19 +440,6 @@
                                     <action selector="settingsButton:" destination="6Hy-Ko-2h0" eventType="touchUpInside" id="nMz-EQ-c1N"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdz-qv-xhe">
-                                <rect key="frame" x="11" y="57" width="132" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="132" id="BPF-SN-ujY"/>
-                                </constraints>
-                                <state key="normal" title=" Iniciar Sesión" image="arrow.left" catalog="system">
-                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="loginButton:" destination="jPO-EG-exD" eventType="touchUpInside" id="6Qw-k9-PGU"/>
-                                    <action selector="loginButton:" destination="6Hy-Ko-2h0" eventType="touchUpInside" id="jk6-RB-NgH"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -422,11 +452,9 @@
                             <constraint firstItem="UNs-oe-iOR" firstAttribute="centerX" secondItem="le6-Lx-gd7" secondAttribute="centerX" id="RA1-3v-RTT"/>
                             <constraint firstItem="UNs-oe-iOR" firstAttribute="centerY" secondItem="le6-Lx-gd7" secondAttribute="centerY" constant="-300" id="RpM-gt-g7K"/>
                             <constraint firstItem="vVH-M5-6xk" firstAttribute="centerY" secondItem="le6-Lx-gd7" secondAttribute="centerY" id="fTF-qe-bN9"/>
-                            <constraint firstItem="bdz-qv-xhe" firstAttribute="centerY" secondItem="le6-Lx-gd7" secondAttribute="centerY" constant="-380" id="jXs-NJ-2FP"/>
                             <constraint firstItem="O0F-mY-Gko" firstAttribute="centerX" secondItem="le6-Lx-gd7" secondAttribute="centerX" constant="-150" id="nji-Pn-bUC"/>
                             <constraint firstItem="ZiE-Lk-l30" firstAttribute="centerX" secondItem="le6-Lx-gd7" secondAttribute="centerX" constant="150" id="u1R-y4-Cok"/>
                             <constraint firstItem="vVH-M5-6xk" firstAttribute="centerX" secondItem="le6-Lx-gd7" secondAttribute="centerX" id="vvs-G6-M74"/>
-                            <constraint firstItem="bdz-qv-xhe" firstAttribute="centerX" secondItem="le6-Lx-gd7" secondAttribute="centerX" constant="-130" id="yhv-iy-y8U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XPE-vE-IKg"/>
                     </view>
